; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/cx231xx/extr_cx231xx-avcore.c_cx231xx_i2s_blk_initialize.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/cx231xx/extr_cx231xx-avcore.c_cx231xx_i2s_blk_initialize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cx231xx = type { i32 }

@I2S_BLK_DEVICE_ADDRESS = common dso_local global i32 0, align 4
@CH_PWR_CTRL1 = common dso_local global i32 0, align 4
@CH_PWR_CTRL2 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cx231xx_i2s_blk_initialize(%struct.cx231xx* %0) #0 {
  %2 = alloca %struct.cx231xx*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store %struct.cx231xx* %0, %struct.cx231xx** %2, align 8
  store i32 0, i32* %3, align 4
  %5 = load %struct.cx231xx*, %struct.cx231xx** %2, align 8
  %6 = load i32, i32* @I2S_BLK_DEVICE_ADDRESS, align 4
  %7 = load i32, i32* @CH_PWR_CTRL1, align 4
  %8 = call i32 @cx231xx_read_i2c_data(%struct.cx231xx* %5, i32 %6, i32 %7, i32 1, i32* %4, i32 1)
  store i32 %8, i32* %3, align 4
  %9 = load i32, i32* %4, align 4
  %10 = or i32 %9, 128
  store i32 %10, i32* %4, align 4
  %11 = load %struct.cx231xx*, %struct.cx231xx** %2, align 8
  %12 = load i32, i32* @I2S_BLK_DEVICE_ADDRESS, align 4
  %13 = load i32, i32* @CH_PWR_CTRL1, align 4
  %14 = load i32, i32* %4, align 4
  %15 = call i32 @cx231xx_write_i2c_data(%struct.cx231xx* %11, i32 %12, i32 %13, i32 1, i32 %14, i32 1)
  store i32 %15, i32* %3, align 4
  %16 = load %struct.cx231xx*, %struct.cx231xx** %2, align 8
  %17 = load i32, i32* @I2S_BLK_DEVICE_ADDRESS, align 4
  %18 = load i32, i32* @CH_PWR_CTRL2, align 4
  %19 = call i32 @cx231xx_write_i2c_data(%struct.cx231xx* %16, i32 %17, i32 %18, i32 1, i32 0, i32 1)
  store i32 %19, i32* %3, align 4
  %20 = load i32, i32* %3, align 4
  ret i32 %20
}

declare dso_local i32 @cx231xx_read_i2c_data(%struct.cx231xx*, i32, i32, i32, i32*, i32) #1

declare dso_local i32 @cx231xx_write_i2c_data(%struct.cx231xx*, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
